# workflows

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: makefile-check  makefile-check.yaml  post-push-checks.yaml  run-pre-commit.yaml  setup-poetry.yaml  test-makefile-check.yaml  test-run-pre-commit.yaml
hrdag/precommit/: check_makefiles.py  shell.py
tests/hrdag/precommit/: conftest.py  test_check_makefiles.py  test_shell.py
tests/successful/: .pre-commit-config.yaml
