[tool.poetry]
name = "hrdag-workflows"
version = "0.1.0"
description = "Standard workflows for HRDAG"
authors = ["Rafe Kaplan <766471+slobberchops@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.4.2", extras = ["toml"]}
pytest = "^7.1.2"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-makefiles = "hrdag.precommit.check_makefiles:main"

[tool.black]
line-length = 79

[tool.isort]
force_single_line = true
profile = "black"

[tool.coverage.run]
omit = [
    "tests/*",
]
